@@ -5,6 +5,8 @@ http://www.rsnapshot.org/
 
 VERSION 1.3.x
 ------------------------------------------------------------------------------
+- Allow rsnapshot to wait for the lockfile to be freed by another instance
+  instead of aborting.
 - make script uses pod2man instead of /usr/bin/pod2man
 - rsnapshot-diff: Fixed removed files reported as addition (+ mark)
 - check for SIGPIPE, mainly in case cron fails when trying to mail
